Fix: Gradient - Type and Angle field misalign issue in multi-button

--- a/src/blocks/buttons-child/style.scss
+++ b/src/blocks/buttons-child/style.scss
@@ -23,5 +23,5 @@
 
 // This helps to fix alignment of gradient control input fields.
 .uagb-gradient-picker .components-flex.components-custom-gradient-picker__ui-line {
-	align-items: first baseline;
+	align-items: center;
 }
